share-db/gitlab-dev/gitlab-ingress.yaml
# Source: db/templates/ingressdbgui.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab-ing
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "gitlab.10.20.0.68.xip.io"
    http:
      paths:
      - backend:
          serviceName: gitlab-service
          servicePort: 80
        path: "/"
        pathType: "ImplementationSpecific"
